--- a/src/fr/course/ihm/RunnerView.form
+++ b/src/fr/course/ihm/RunnerView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="403" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -113,12 +113,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="35b35" class="javax.swing.JLabel" binding="ParticipantListe">
+          <component id="ad244" class="javax.swing.JList" binding="ParticipantListe">
             <constraints/>
-            <properties>
-              <text value=""/>
-              <verticalAlignment value="1"/>
-            </properties>
+            <properties/>
           </component>
         </children>
       </scrollpane>
