--- a/src/fr/course/ihm/RunnerView.form
+++ b/src/fr/course/ihm/RunnerView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.course.ihm.RunnerView">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="403" height="400"/>
@@ -95,7 +95,11 @@
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="fr/course/ihm/ressource/zoom.png"/>
           <text value="List"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
       <component id="689ce" class="javax.swing.JButton" binding="addButton" default-binding="true">
@@ -103,22 +107,14 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add"/>
+          <font name="Arial Black"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="fr/course/ihm/ressource/add.png"/>
+          <text value="Ajouter"/>
+          <verticalAlignment value="0"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
-      <scrollpane id="27d2c" binding="listeParticipantPanel">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="ad244" class="javax.swing.JList" binding="ParticipantListe">
-            <constraints/>
-            <properties/>
-          </component>
-        </children>
-      </scrollpane>
       <component id="d63a2" class="javax.swing.JLabel" binding="lbAge">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
